# fitbox

./: CLAUDE.md  README.md  pyproject.toml  pytest.ini
ci/: Dockerfile  docker-compose-tr-prod.yaml  docker-compose-tr.yaml  docker-compose.yaml  mosquitto.conf
ci/conf/: mosquitto.conf  prometheus.yml  promtail.yaml
ci/jenkins/: docker_build_fb1-tr.jenkins  docker_build_fb1.jenkins
src/: alembic.ini  app.py  constants.py  dependencies.py  routers.py  run.py  settings.py  state.py
src/core/: simple_cache.py
src/database/migrations/: env.py
src/database/migrations/versions/: 025a2c06e23a_0004_added_bookings.py  0ef9d84c195d_0015_move_is_done_to_slot.py  1fc703a9c018_0005_added_records.py  2acf1054c474_0012_added_sprints_data_to_booking.py  33fed4fde1cd_0011_added_sprints.py  3834299b51e3_0008_rename_to_score.py  56e7eb15bb0a_0001_initial_users.py  632500fbb155_0007_added_transactions.py  696768de7d55_0009_added_money.py  6e309011d674_0010_added_bindings_to_slots.py  760bae9c0dd1_0006_added_new_fields_to_booking.py  7e34a5644747_0002_added_slots.py  8b653e9560c5_0013_add_telegram_photo.py  d63e4bc9f613_0003_added_slots.py  f98baba23ac9_0014_added_result_to_sprint.py
src/database/models/: __init__.py  bookings.py  records.py  slots.py  sprints.py  transactions.py  users.py
src/monitoring/: instumentator.py
src/scripts/: Readme.md  create_user.py  excel_to_hits.py
src/tests/: conftest.py
src/tests/sensors/: test_hits_bulk.py  test_routers.py  test_state.py
src/web/auth/: login.py  refresh.py
src/web/bookings/: filters.py  routers.py  schemas.py  services.py
src/web/common/: common.py  services.py
src/web/records/: filters.py  routers.py  schemas.py  services.py
src/web/sensors/: routers.py  schemas.py  services.py
src/web/slots/: filters.py  routers.py  schemas.py  services.py
src/web/transactions/: filters.py  routers.py  schemas.py  services.py
src/web/users/: filters.py  routers.py  schemas.py  services.py  users.py
