[project]
name = "fitbox"
version = "0.1.0"
description = "Application for sport"
authors = [
    {name = "Sergei Storozhuk",email = "s_storozhuk@wargaming.net"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "fastapi-filter (>=2.0.1,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "fastapi-pagination[sqlalchemy] (>=0.13.1,<0.14.0)",
    "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
    "gmqtt (>=0.7.0,<0.8.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^6.0.1"
